--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,11 +13,10 @@ source:
     - install_scripts.patch
 
 build:
-  number: 1
+  number: 2
   skip: True  # [win]
   features:
     - vc9  # [win and py27]
-    - vc10  # [win and py34]
     - vc14  # [win and (py35 and py36)]
 
 requirements:
@@ -32,7 +31,6 @@ requirements:
     - numpy 1.11.*  # [win and py36]
     - libgdal {{ version }}
     - vc 9  # [win and py27]
-    - vc 10  # [win and py34]
     - vc 14  # [win and (py35 and py36)]
   run:
     - python
@@ -42,7 +40,6 @@ requirements:
     - libgdal {{ version }}
     - pcre
     - vc 9  # [win and py27]
-    - vc 10  # [win and py34]
     - vc 14  # [win and (py35 and py36)]
 
 test:
@@ -73,8 +70,8 @@ test:
     - gdalwarp --version
     - gdalinfo --formats
     - gdalinfo http://thredds.nersc.no/thredds/dodsC/greenpath/Model/topaz  # [not win]
-    - conda inspect linkages -p $PREFIX gdal  # [not win]
-    - conda inspect objects -p $PREFIX gdal  # [osx]
+    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
+    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
 about:
   home: http://www.gdal.org/
