--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - numpy 1.9.*  # [win and py35]
     - numpy 1.11.*  # [win and py36]
     - libgdal {{ version }}
+    - openjpeg 2.1.*
     - vc 9  # [win and py27]
     - vc 14  # [win and (py35 and py36)]
   run:
@@ -38,6 +39,7 @@ requirements:
     - numpy >=1.9  # [win and py35]
     - numpy >=1.11  # [win and py36]
     - libgdal {{ version }}
+    - openjpeg 2.1.*
     - pcre
     - vc 9  # [win and py27]
     - vc 14  # [win and (py35 and py36)]
