--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ source:
     - install_scripts.patch
 
 build:
-  number: 6
+  number: 7
   features:
     - vc9  # [win and py27]
     - vc14  # [win and (py35 or py36)]
@@ -54,7 +54,7 @@ requirements:
     - postgresql
     - proj4 4.9.3
     - sqlite 3.13.*
-    - xerces-c
+    - xerces-c 3.2.0
     - zlib 1.2.11  # [not win]
     - vc 9  # [win and py27]
     - vc 14  # [win and (py35 or py36)]
@@ -82,7 +82,7 @@ requirements:
     - openjpeg >=2.1,<2.3.0
     - proj4 4.9.3
     - sqlite 3.13.*
-    - xerces-c
+    - xerces-c 3.2.0
     - zlib 1.2.11  # [not win]
     - pcre
     - vc 9  # [win and py27]
