--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -63,6 +63,7 @@ requirements:
     - proj
     # qhull disabled because of https://github.com/conda-forge/qgis-feedstock/issues/284#issuecomment-1356490896
     # - qhull
+    - setuptools
     - sqlite
     - tiledb
     - xerces-c
@@ -278,6 +279,7 @@ outputs:
         # Workaround to prevent conflicts seen in
         #  https://github.com/conda-forge/gdal-feedstock/pull/543
         - openssl
+        - setuptools
       run:
         - python
         - {{ pin_subpackage('libgdal', exact=True) }}
